sandbox/mpi/fp_mpi.pas


function MPI_Abort(comm:TMPI_Comm; errorcode:longint):longint;cdecl;external libhdf5;
function MPI_Accumulate(origin_addr:pointer; origin_count:longint; origin_datatype:TMPI_Datatype; target_rank:longint; target_disp:TMPI_Aint; 
           target_count:longint; target_datatype:TMPI_Datatype; op:TMPI_Op; win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Add_error_class(errorclass:Plongint):longint;cdecl;external libhdf5;
function MPI_Add_error_code(errorclass:longint; errorcode:Plongint):longint;cdecl;external libhdf5;
function MPI_Add_error_string(errorcode:longint; _string:Pchar):longint;cdecl;external libhdf5;
function MPI_Allgather(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Iallgather(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Allgatherv(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcounts:Plongint; 
           displs:Plongint; recvtype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Iallgatherv(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcounts:Plongint; 
           displs:Plongint; recvtype:TMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Alloc_mem(size:TMPI_Aint; info:TMPI_Info; baseptr:pointer):longint;cdecl;external libhdf5;
function MPI_Allreduce(sendbuf:pointer; recvbuf:pointer; count:longint; datatype:TMPI_Datatype; op:TMPI_Op; 
           comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Iallreduce(sendbuf:pointer; recvbuf:pointer; count:longint; datatype:TMPI_Datatype; op:TMPI_Op; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Alltoall(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Ialltoall(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Alltoallv(sendbuf:pointer; sendcounts:Plongint; sdispls:Plongint; sendtype:TMPI_Datatype; recvbuf:pointer; 
           recvcounts:Plongint; rdispls:Plongint; recvtype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Ialltoallv(sendbuf:pointer; sendcounts:Plongint; sdispls:Plongint; sendtype:TMPI_Datatype; recvbuf:pointer; 
           recvcounts:Plongint; rdispls:Plongint; recvtype:TMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Alltoallw(sendbuf:pointer; sendcounts:Plongint; sdispls:Plongint; sendtypes:PMPI_Datatype; recvbuf:pointer; 
           recvcounts:Plongint; rdispls:Plongint; recvtypes:PMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Ialltoallw(sendbuf:pointer; sendcounts:Plongint; sdispls:Plongint; sendtypes:PMPI_Datatype; recvbuf:pointer; 
           recvcounts:Plongint; rdispls:Plongint; recvtypes:PMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Barrier(comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Ibarrier(comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Bcast(buffer:pointer; count:longint; datatype:TMPI_Datatype; root:longint; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Bsend(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Ibcast(buffer:pointer; count:longint; datatype:TMPI_Datatype; root:longint; comm:TMPI_Comm; 
           request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Bsend_init(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Buffer_attach(buffer:pointer; size:longint):longint;cdecl;external libhdf5;
function MPI_Buffer_detach(buffer:pointer; size:Plongint):longint;cdecl;external libhdf5;
function MPI_Cancel(request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Cart_coords(comm:TMPI_Comm; rank:longint; maxdims:longint; coords:Plongint):longint;cdecl;external libhdf5;
function MPI_Cart_create(old_comm:TMPI_Comm; ndims:longint; dims:Plongint; periods:Plongint; reorder:longint; 
           comm_cart:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Cart_get(comm:TMPI_Comm; maxdims:longint; dims:Plongint; periods:Plongint; coords:Plongint):longint;cdecl;external libhdf5;
function MPI_Cart_map(comm:TMPI_Comm; ndims:longint; dims:Plongint; periods:Plongint; newrank:Plongint):longint;cdecl;external libhdf5;
function MPI_Cart_rank(comm:TMPI_Comm; coords:Plongint; rank:Plongint):longint;cdecl;external libhdf5;
function MPI_Cart_shift(comm:TMPI_Comm; direction:longint; disp:longint; rank_source:Plongint; rank_dest:Plongint):longint;cdecl;external libhdf5;
function MPI_Cart_sub(comm:TMPI_Comm; remain_dims:Plongint; new_comm:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Cartdim_get(comm:TMPI_Comm; ndims:Plongint):longint;cdecl;external libhdf5;
function MPI_Close_port(port_name:Pchar):longint;cdecl;external libhdf5;
function MPI_Comm_accept(port_name:Pchar; info:TMPI_Info; root:longint; comm:TMPI_Comm; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Comm_c2f(comm:TMPI_Comm):TMPI_Fint;cdecl;external libhdf5;
function MPI_Comm_call_errhandler(comm:TMPI_Comm; errorcode:longint):longint;cdecl;external libhdf5;
function MPI_Comm_compare(comm1:TMPI_Comm; comm2:TMPI_Comm; result:Plongint):longint;cdecl;external libhdf5;
function MPI_Comm_connect(port_name:Pchar; info:TMPI_Info; root:longint; comm:TMPI_Comm; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Comm_create_errhandler(_function:PMPI_Comm_errhandler_function; errhandler:PMPI_Errhandler):longint;cdecl;external libhdf5;
function MPI_Comm_create_keyval(comm_copy_attr_fn:PMPI_Comm_copy_attr_function; comm_delete_attr_fn:PMPI_Comm_delete_attr_function; comm_keyval:Plongint; extra_state:pointer):longint;cdecl;external libhdf5;
function MPI_Comm_create_group(comm:TMPI_Comm; group:TMPI_Group; tag:longint; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Comm_create(comm:TMPI_Comm; group:TMPI_Group; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Comm_delete_attr(comm:TMPI_Comm; comm_keyval:longint):longint;cdecl;external libhdf5;
function MPI_Comm_disconnect(comm:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Comm_dup(comm:TMPI_Comm; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Comm_idup(comm:TMPI_Comm; newcomm:PMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Comm_dup_with_info(comm:TMPI_Comm; info:TMPI_Info; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Comm_f2c(comm:TMPI_Fint):TMPI_Comm;cdecl;external libhdf5;
function MPI_Comm_free_keyval(comm_keyval:Plongint):longint;cdecl;external libhdf5;
function MPI_Comm_free(comm:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Comm_get_attr(comm:TMPI_Comm; comm_keyval:longint; attribute_val:pointer; flag:Plongint):longint;cdecl;external libhdf5;
function MPI_Dist_graph_create(comm_old:TMPI_Comm; n:longint; nodes:Plongint; degrees:Plongint; targets:Plongint; 
           weights:Plongint; info:TMPI_Info; reorder:longint; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Dist_graph_create_adjacent(comm_old:TMPI_Comm; indegree:longint; sources:Plongint; sourceweights:Plongint; outdegree:longint; 
           destinations:Plongint; destweights:Plongint; info:TMPI_Info; reorder:longint; comm_dist_graph:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Dist_graph_neighbors(comm:TMPI_Comm; maxindegree:longint; sources:Plongint; sourceweights:Plongint; maxoutdegree:longint; 
           destinations:Plongint; destweights:Plongint):longint;cdecl;external libhdf5;
function MPI_Dist_graph_neighbors_count(comm:TMPI_Comm; inneighbors:Plongint; outneighbors:Plongint; weighted:Plongint):longint;cdecl;external libhdf5;
function MPI_Comm_get_errhandler(comm:TMPI_Comm; erhandler:PMPI_Errhandler):longint;cdecl;external libhdf5;
function MPI_Comm_get_info(comm:TMPI_Comm; info_used:PMPI_Info):longint;cdecl;external libhdf5;
function MPI_Comm_get_name(comm:TMPI_Comm; comm_name:Pchar; resultlen:Plongint):longint;cdecl;external libhdf5;
function MPI_Comm_get_parent(parent:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Comm_group(comm:TMPI_Comm; group:PMPI_Group):longint;cdecl;external libhdf5;
function MPI_Comm_join(fd:longint; intercomm:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Comm_rank(comm:TMPI_Comm; rank:Plongint):longint;cdecl;external libhdf5;
function MPI_Comm_remote_group(comm:TMPI_Comm; group:PMPI_Group):longint;cdecl;external libhdf5;
function MPI_Comm_remote_size(comm:TMPI_Comm; size:Plongint):longint;cdecl;external libhdf5;
function MPI_Comm_set_attr(comm:TMPI_Comm; comm_keyval:longint; attribute_val:pointer):longint;cdecl;external libhdf5;
function MPI_Comm_set_errhandler(comm:TMPI_Comm; errhandler:TMPI_Errhandler):longint;cdecl;external libhdf5;
function MPI_Comm_set_info(comm:TMPI_Comm; info:TMPI_Info):longint;cdecl;external libhdf5;
function MPI_Comm_set_name(comm:TMPI_Comm; comm_name:Pchar):longint;cdecl;external libhdf5;
function MPI_Comm_size(comm:TMPI_Comm; size:Plongint):longint;cdecl;external libhdf5;
function MPI_Comm_spawn(command:Pchar; argv:PPchar; maxprocs:longint; info:TMPI_Info; root:longint; 
           comm:TMPI_Comm; intercomm:PMPI_Comm; array_of_errcodes:Plongint):longint;cdecl;external libhdf5;
function MPI_Comm_spawn_multiple(count:longint; array_of_commands:PPchar; array_of_argv:PPPchar; array_of_maxprocs:Plongint; array_of_info:PMPI_Info; 
           root:longint; comm:TMPI_Comm; intercomm:PMPI_Comm; array_of_errcodes:Plongint):longint;cdecl;external libhdf5;
function MPI_Comm_split(comm:TMPI_Comm; color:longint; key:longint; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Comm_split_type(comm:TMPI_Comm; split_type:longint; key:longint; info:TMPI_Info; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Comm_test_inter(comm:TMPI_Comm; flag:Plongint):longint;cdecl;external libhdf5;
function MPI_Compare_and_swap(origin_addr:pointer; compare_addr:pointer; result_addr:pointer; datatype:TMPI_Datatype; target_rank:longint; 
           target_disp:TMPI_Aint; win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Dims_create(nnodes:longint; ndims:longint; dims:Plongint):longint;cdecl;external libhdf5;
function MPI_Errhandler_c2f(errhandler:TMPI_Errhandler):TMPI_Fint;cdecl;external libhdf5;
function MPI_Errhandler_f2c(errhandler:TMPI_Fint):TMPI_Errhandler;cdecl;external libhdf5;
function MPI_Errhandler_free(errhandler:PMPI_Errhandler):longint;cdecl;external libhdf5;
function MPI_Error_class(errorcode:longint; errorclass:Plongint):longint;cdecl;external libhdf5;
function MPI_Error_string(errorcode:longint; _string:Pchar; resultlen:Plongint):longint;cdecl;external libhdf5;
function MPI_Exscan(sendbuf:pointer; recvbuf:pointer; count:longint; datatype:TMPI_Datatype; op:TMPI_Op; 
           comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Fetch_and_op(origin_addr:pointer; result_addr:pointer; datatype:TMPI_Datatype; target_rank:longint; target_disp:TMPI_Aint; 
           op:TMPI_Op; win:TMPI_Win):longint;cdecl;external libhdf5;
